# grades_fastapi

./: Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: .gitignore
client/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: main.js  style.css
client/src/assets/css/components/: form.css
client/src/assets/css/layout/: header.css  sidebar.css
client/src/assets/css/pages/: login.css
client/src/assets/css/utilities/: colors.css  utils.css
client/src/components/: CampusHeader.vue  Sidebar.vue
client/src/router/: index.js
client/src/views/: Campus.vue  Dashboard.vue  Home.vue  Homework.vue  Login.vue  Messages.vue  NotFoundView.vue  Notices.vue  Subjects.vue  UserProfile.vue  UserSetting.vue
server/: .dockerignore  .env  Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: b9a80f647a4c_cambios_en_los_modelos.py
server/app/: main.py
server/app/database/: database.py
server/app/models/: base.py  subjects.py  users.py
server/app/routers/: endpoints.py
server/app/schemas/: subjects.py  users.py
server/routes/: endpoints.py
server/src/: main.py
server/src/core/: config.py
server/src/database/: database.py  school.sql
server/src/models/: subjects.py  users.py
server/src/routers/: endpoints.py
server/src/schemas/: subjects.py  users.py
server/users/: models.py
